# git-mediate-rs

./: Cargo.toml  README.md  RELEASING.md
.github/workflows/: ci.yml  publish.yml
src/: diff.rs  git.rs  lib.rs  main.rs  mediate.rs  parse.rs  resolve.rs  types.rs
src/resolve/: internal.rs  mod.rs  normalize.rs  split.rs  strategies.rs  window.rs
tests/: integration.rs
