[package]
name = "git-mediate"
version = "0.1.0"
edition = "2024"
description = "Automatically resolve trivial git merge conflicts"

[dependencies]
similar = "3"
colored = "3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "git-mediate"
path = "src/main.rs"

[lib]
name = "git_mediate"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
