[package]
name = "git-mediate"
version = "0.1.0"
edition = "2024"
description = "Automatically resolve trivial git merge conflicts"
license = "GPL-2.0-only"
repository = "https://github.com/jonny-sh/git-mediate-rs"
homepage = "https://github.com/jonny-sh/git-mediate-rs"
documentation = "https://docs.rs/git-mediate"
readme = "README.md"
keywords = ["git", "merge", "conflict", "diff3"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
similar = "3"
colored = "3"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"

[[bin]]
name = "git-mediate"
path = "src/main.rs"

[lib]
name = "git_mediate"
path = "src/lib.rs"
